Images for all screens fixed and text aligned

--- a/src/index.css
+++ b/src/index.css
@@ -52,4 +52,8 @@
   .text_above_title {
     font-size: 0.75rem;
     opacity: 0.75;
+    font-family: Outfit;
+  }
+  .hover-elements{
+
   }
